libstream-perl (0.9.8) UNRELEASED; urgency=low

  * process() commits output stream even in commit=0 mode

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 03 Mar 2011 20:38:17 +0300

libstream-perl (0.9.7) unstable; urgency=low

  * File::Cursor r/o mode 

 -- Andrei Mishchenko <druxa@yandex-team.ru>  Tue, 22 Feb 2011 19:45:43 +0300

libstream-perl (0.9.6) unstable; urgency=low

  * Stream::In::Role::ShiftAsScalar and Stream::In::Role::ShiftAsList roles
  * Stream::Role::Clone
  * Stream::Stream removed
  * migrating to dzil

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 30 Nov 2010 22:15:59 +0300

libstream-perl (0.9.5) unstable; urgency=low

  * storage generated with Stream::Formatter now inherits ClientList role from
    underlying storage
  * Stream::Filter::FilteredIn propagates Shift role

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 11 Nov 2010 19:01:48 +0300

libstream-perl (0.9.4) unstable; urgency=low

  * Stream::Base: 'cap', 'caps', 'class_caps' methods removed
  * Stream::File implements lag
  * build using ppb-native.mk

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 01 Nov 2010 22:13:51 +0300

libstream-perl (0.9.3) unstable; urgency=low

  * Stream::Catalog::Plugin::File - correctly handle cross-namespace name
    collisions

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 27 Oct 2010 20:41:41 +0400

libstream-perl (0.9.2) unstable; urgency=low

  * Stream::File::Cursor: reassociation with new file causes warn instead of
    croak

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 21 Oct 2010 00:17:31 +0400

libstream-perl (0.9.1) unstable; urgency=low

  * Stream::File: don't break posfile when commiting after reading incomplete
    line

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 01 Sep 2010 16:40:29 +0400

libstream-perl (0.9.0) unstable; urgency=low
